# snake-ai

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  auto-run.sh  body_part.cpp  body_part.h  chromosome.cpp  chromosome.h  clean.sh  clear-docker.sh  compile.sh  compose.yaml  conda-lock.yml  constants.h  dep-opensuse.sh  dep-ubuntu.sh  dep_opensuse.sh  environment.yml  food.cpp  food.h  gene.cpp  gene.h  gui.cpp  gui.h  main.cpp  manual_tests.cpp  matrix_test  player.cpp  player.h  population.cpp  qubo-test.ipynb  readme.md  requirements-dev.txt  requirements.txt  setup-nfd.sh  test.wg  utils.cpp  utils.h
.github/workflows/: cmake-build-test.yml  dockerhub.yml  ghrc.yml
game/: ai_player.cpp  ai_player.h  board.cpp  board.h  body_part.h  food.cpp  food.h  gui.cpp  gui.h  player.cpp  player.h
game/players/: ai_player.cpp  ai_player.h  player.cpp  player.h  qubo_player.cpp  qubo_player.h
game/screens/: ai_screen.cpp  ai_screen.h  ai_screen_play.cpp  ai_screen_play.h  debug_screen.cpp  debug_screen.h  player_screen.cpp  player_screen.h  qubo_screen.cpp  qubo_screen.h  screens.cpp  screens.h  start_screen.cpp  start_screen.h
game/screens/agents/: ai_player.cpp  ai_player.h
genetic/: ai_player.cpp  ai_player.h  chromosome.cpp  chromosome.h  gene.cpp  gene.h  population.cpp  population.h
helpers/: constants.h  exceptions.cpp  exceptions.h  utils.cpp  utils.h
machine/: activation.cpp  activation.h  layer.cpp  layer.h  machine.cpp  machine.h  weights.cpp  weights.h
matrix/: matrix.cpp  matrix.h
pygame-qubo-test/: main.py  qubo.py
pygame-qubo-test/elements/: board.py  directions.py  element.py  food.py  player.py  position.py
pygame-qubo-test/tests/: test_elements.py  test_qubo.py
pygame-qubo-test/utils/: constants.py
qubo/: qubo.cpp  qubo.h
tests/: activations_test.cc  ai_player_test.cc  board_test.cc  chromosome_test.cc  exceptions_test.cc  gene_test.cc  layer_test.cc  matrix_test.cc  nn_test.cc  player_test.cc  population_test.cc  qubo_player_test.cc  qubo_test.cc  utils_test.cc  weights_test.cc
